Add wled white correction aglhoritms

--- a/www/i18n/en.json
+++ b/www/i18n/en.json
@@ -440,7 +440,10 @@
   "edt_dev_enum_sub_min_cool_adjust": "Subtract cool white",
   "edt_dev_enum_sub_min_warm_adjust": "Subtract warm white",
   "edt_dev_enum_subtract_minimum": "Subtract minimum",
-  "edt_dev_enum_sub_min_custom_adjust": "Subtract custom",
+  "edt_dev_enum_sub_min_custom_adjust": "Subtract minimum, custom",
+  "edt_dev_enum_wled_auto": "Wled auto",
+  "edt_dev_enum_wled_auto_max": "Wled auto max",
+  "edt_dev_enum_wled_auto_accurate": "Wled auto accurate",
   "edt_dev_enum_white_off": "White off",
   "edt_dev_general_colorOrder_title": "RGB byte order",
   "edt_dev_general_hardwareLedCount_title": "Hardware LED count",
