--- a/www/i18n/en.json
+++ b/www/i18n/en.json
@@ -440,7 +440,8 @@
   "edt_dev_enum_sub_min_cool_adjust": "Subtract cool white",
   "edt_dev_enum_sub_min_warm_adjust": "Subtract warm white",
   "edt_dev_enum_subtract_minimum": "Subtract minimum",
-  "edt_dev_enum_sub_min_custom_adjust": "Subtract minimum, custom",
+  "edt_dev_enum_hyperserial_cold_white": "Hyperserial, cold white",
+  "edt_dev_enum_hyperserial_neutral_white": "Hyperserial, neutral white",
   "edt_dev_enum_wled_auto": "Wled auto",
   "edt_dev_enum_wled_auto_max": "Wled auto max",
   "edt_dev_enum_wled_auto_accurate": "Wled auto accurate",
